feat(gc-log): add Xlog-parity presets gc-log2 (info) and gc-log3 (verbose)
Two customer-matched .jfc presets capturing exactly what the customer's
-Xlog configs emit:
- gc-log2.jfc ↔ -Xlog:trimnative*,gc*,gc+region*,gc+ergo*,gc+humongous*,
  stringdedup*=info (info-level parity)
- gc-log3.jfc ↔ -Xlog:gc*=info,heap*=debug,ergo*=trace (verbose parity:
  region topology + ergo trace)

gc-log.jfc: enable the ergo catch-all as jdk.GCErgonomicInfo (the split
event that actually ships; jdk.GCErgonomicEvent never existed), plus
jdk.NativeHeapTrim; drop the inert stringdedup threshold. Ergo narration
capture verified: gc+ergo* → GCErgonomicInfo/Trace verbatim, gc+marking →
typed GCPhaseConcurrent.

BUGS.md: record Bug 466 (fixed) and re-scope Bug 465 (trim + concurrent
hashtable resize crash, any collector — upstream/backport JVM bug).